--- a/worktest/wezhuxue-weixin/src/main/webapp/views/zxt_stu/sb/fundraising.html
+++ b/worktest/wezhuxue-weixin/src/main/webapp/views/zxt_stu/sb/fundraising.html
@@ -112,12 +112,12 @@
 				<span class="sticky"><img id="zhimaPic" src="images/tickfive.png"></span> </div>
 			<div class="clearfloat df padfix">
 				<h2 class="fl frt">成绩单 <span>：</span></h2>
-				<div class="fl srtTwo srt" id="popReport"><img id="reportImg" src="images/fivepro.png"></div>
+				<div class="fl srtTwo srt zoom" id="popReport"><img id="reportImg" src="images/fivepro.png"></div>
 				<h2 class="trt" id="reportNum">×2</h2>
 			</div>
 			<div class="clearfloat df">
 				<h2 class="fl frt">获奖证明<span>：</span></h2>
-				<div class="fl srtTwo srt" id="popAward"><img id="awardImg" src="images/fiveprro.png"></div>
+				<div class="fl srtTwo srt zoom" id="popAward"><img id="awardImg" src="images/fiveprro.png"></div>
 				<h2 class="trt" id="awardNum">×3</h2>
 			</div>
 			<div class="clearfloat pb">
